Ch-ch-ch changes

--- a/index2.html
+++ b/index2.html
@@ -42,6 +42,6 @@
     This shall be a footer
   </footer>
 
-  <script src="js/scripts.js"></script>
+  <!-- <script src="js/scripts.js"></script> -->
 </body>
 </html>
