--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
   </main>
 
   <footer>
-    This shall be a footer
+    This shall be an awesome footer
   </footer>
 
   <!-- <script src="js/scripts.js"></script> -->
