Testing VS Code

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 
-<body>You can't see the forest for the trees.</body>
+<body>You can't see the forest for the all trees.</body>
 
 </html>
