--- a/index_liveagent.html
+++ b/index_liveagent.html
@@ -6,6 +6,7 @@
 
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" integrity="sha256-1fEPhSsRKlFKGfK3eO710tEweHh1fwokU5wFGDHO+vg=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.0.11/purify.min.js" integrity="sha256-CttTBp3vqcw55O+XqmrPjeA17wiC1WxRnjIOeXwHu/s=" crossorigin="anonymous"></script>
     <style type='text/css'>
         .embeddedServiceHelpButton .helpButton .uiButton {
             background-color: #005290;
