--- a/index_liveagent.html
+++ b/index_liveagent.html
@@ -47,10 +47,10 @@
             embedded_svc.settings.entryFeature = 'LiveAgent';
     
             embedded_svc.init(
-                'https://churchcommunitybuilder--Partial.my.salesforce.com',
-                'https://partial-churchcommunitybuilder.cs36.force.com',
+                'https://churchcommunitybuilder--FullData.my.salesforce.com',
+                'https://fulldata-churchcommunitybuilder.cs36.force.com',
                 gslbBaseURL,
-                '00D2h0000008ak7',
+                '00D2h0000000MmN',
                 'Snapin_Chat',
                 {
                     baseLiveAgentContentURL: 'https://c.la3-c1cs-ph2.salesforceliveagent.com/content',
